2009-12-23  Geoff Norton  <gnorton@novell.com>

	* DeflateStream.cs: Ensure our callbacks go into the correct
	static methods.

2009-09-14 Jonathan Pryor <jpryor@novell.com>

	* DeflateStream.cs: MonoTouch reverse callbacks need to be static
	  methods and be annotated with [MonoPInvokeCallback].  Get things
	  working with these limitations.

2009-07-20 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* GzipStream.cs: fixed Dispose (bool).
	* DeflateStream.cs: simplify the interface with unmanaged code, big
	reduction of managaed<->unmanaged round trips.
	Also fixes bug #523418.

2007-09-22  Gert Driesen  <drieseng@users.sourceforge.net>

	* DeflateStream.cs: Avoid double free. Fixes bug #327480.

2006-10-22  Zoltan Varga  <vargaz@gmail.com>

	* DeflateStream.cs: Throw a more meaningfull exception when zlib initialization
	fails.

2006-09-28  Andrew Skiba  <andrews@mainsoft.com>

	* DeflateStream.cs: TARGET_JVM

2006-09-19  Miguel de Icaza  <miguel@novell.com>

	* GzipStream.cs: Only dispose, do not try to use internal routines.

2006-04-04  Atsushi Enomoto  <atsushi@ximian.com>

	* DeflateStream.cs GzipStream.cs : updated API to 2.0 RTM.
	  Dispose() should certainly release resources than the finalizer.

2006-03-11  Miguel de Icaza  <miguel@novell.com>

	* DeflateStream.cs: Comment out DllImport that was not being
	used. 

2005-05-18  Sebastien Pouliot  <sebastien@ximian.com>

	* DeflateStream.cs: Fixed some changed/missing exceptions.
	* GzipStream.cs: Renamed to GZipStream (from beta2).

2004-12-03  Raja R Harinath  <rharinath@novell.com>

	* DeflateStream.cs, GzipStream.cs, CompressionMode.cs: Make class public.

2004-11-10  Martin Baulig  <martin@ximian.com>

	* DeflateStream.cs, GzipStream.cs: `System.IO.Stream.Length' doesn't
	have any setter.	

2004-10-02  Christopher Lahey (clahey@ximian.com)

	* DeflateStream.cs GzipStream.cs: Implemented the DeflateStream
	and GzipStream using zlib.
